# medonc_applet

./: .gitignore  copy_orig.sh  copy_synth.sh  prep.sh  pyproject.toml  readme.md
example/: info.json
example/medonc-fake/: info.json
example/medonc-fake/rounds/: 00_tutorial.json  01_experiment.json  01_roundtwo.json  02_experiment2.json
src/guessgame/: __init__.py  base.py  creator.py  ds.py  report.py
src/guessgame/templates/: game.html  index.html  patient.html  report.html  report.mplstyle  results.html
