[project]
name = "guessgame"
version = "0.0.1"
authors = [
  { name="Kapenekakis Antheas", email="antheas@cs.aau.dk" },
]
description = "A system for reproducible and scalable data synthesis."
readme = "README_PYPI.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
  # Core
  "flask",
  "pandas",
]

[project.urls]
"Homepage" = "https://pasteur.dev"
"Bug Tracker" = "https://github.com/pasteur-dev/pasteur/issues"

[project.entry-points."console_scripts"]
guessgame = "guessgame:main"

[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy>=1.15"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["guess*"]  # package names should match these glob patterns (["*"] by default)
